# yt-api

./: .dockerignore  .env.example  .gitignore  .replit  DEPLOY_FREE_HOSTING.md  Dockerfile  README.md  compose.yaml  error-log.txt  main.py  pyproject.toml  replit.nix
.agents/memory/: MEMORY.md  yt-dlp-ejs-bun.md
attached_assets/: Pasted-Ini-pertanyaan-yang-sangat-bagus-dan-kritis-Kita-harus-_1781791830046.txt  cookies_1781947987715.txt
scripts/: Dockerfile
src/youtube_search/api/v1/: docs.py  download.py
src/youtube_search/services/: audio_downloader.py  cloudinary_service.py  playlist_scraper.py  scraper.py
