[project]
name = "ytsearch"
version = "0.1.0"
description = "YouTube 搜尋 API - 無官方 API 成本的影片搜尋服務"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "sacahan", email = "sacahan@example.com" }]
keywords = ["youtube", "search", "api", "scraper", "metadata"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.12"

dependencies = [
    # MCP Support
    "mcp>=1.0.0,<2.0.0",
    # Core dependencies
    "fastapi>=0.104.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.5.2",
    "requests>=2.31.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.31.1",
    # ⭐ Audio Download - UPDATE ke versi terbaru untuk SSL fix
    "yt-dlp>=2024.12.13",
    "cloudinary>=1.38.0",
    "slowapi>=0.1.9",
    # MCP-related dependencies
    "anyio>=4.5",
    "httpx[http2]>=0.27.1",
    "httpx-sse>=0.4",
    "jsonschema>=4.20.0",
    "pyjwt[crypto]>=2.10.1",
    "python-multipart>=0.0.9",
    "sse-starlette>=1.6.1",
    "starlette>=0.27",
    "typing-extensions>=4.9.0",
    "typing-inspection>=0.4.1",
    "youtube-search>=2.2.0",
    # ⭐ Tambahan untuk SSL workaround
    "curl-cffi>=0.7.0",
    "brotli>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.12.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/youtube_search/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_search"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["youtube_search"]
default-section = "third-party"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "curl-cffi>=0.7.0",
    "pytest-asyncio>=1.3.0",
]